@@ -1,3 +1,10 @@
+2006-04-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ld-elfvers/vers.exp: Xfail vers7a, vers7, vers23a, vers23b,
+	vers23c, vers23d, vers23, vers25a, vers25b1, vers25b2, vers27a,
+	vers27b, vers27c1, vers27c2, vers27d4 and vers27d5 if PIC is
+	required.
+
 2006-04-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-alpha/tlsbin.rd: Updated for readelf change.
